src/objects/Apttus_Proposal__Proposal_Document_Output_Format__c.object
<CustomObject>
    <description>Holds default output format preferences by user profile and quote/proposal type for use in the quote/proposal document generation process.</description>
    <fields>
        <fullName>Apttus_Proposal__AllowOverrideWatermark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is allowed to override the default watermark setting during the quote/proposal document generation process.</description>
        <label>Allow Override (Watermark)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is allowed to override the default output format during the quote/proposal document generation process.</description>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__IncludeWatermark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether watermark will be added to the document</description>
        <label>Include Watermark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Output_Format__c</fullName>
        <description>The document output format (either PDF, RTF or DOC or DOCX)</description>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Profile_Id__c</fullName>
        <description>The associated user profile</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Type_Id__c</fullName>
        <description>Associated proposal type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposal Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Proposal Document Output Format</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Document Output Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>